리눅스 기준 설치 & 빌드 매뉴얼